Logos and Footer

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
   <body>
     <%= yield %>
     
+    <%= partial "partials/footer" %>
     <%= javascript_include_tag "site" %>
   </body>
 </html>
