--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -17,6 +17,8 @@ title: COVID-19 Tracking
   </div>
 </div>
 
+<%= partial "partials/partners" %>
+
 <div class="form" id="form">
   <div class="container">
     <form action="#" id="covid-form">
