--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -10,6 +10,7 @@ title: COVID-19 Tracking
       <li><a href="/it" class="langlink ml-4">Italiano</a></li>
     </ul>
     <div>
+      <img class="hero__logo" src="images/covid-icon.png" alt="COVID-19">
       <h1><%= t(:title) %></h1>
       <%= t(:introduction) %>
       <a href="#form" class="btn btn--inv"><%= t(:toform) %></a>
