--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -31,7 +31,7 @@ a {
 }
 
 p {
-  line-height: 1.3;
+  line-height: 1.4;
 }
 
 .btn {
@@ -117,7 +117,7 @@ p {
   .label {
     display: block;
     font-size: .8rem;
-    color: #aaa;
+    color: #888;
     font-weight: bold;
     margin-bottom: .5rem;
     letter-spacing: .02rem;
