--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -27,7 +27,7 @@ title: COVID-19 Tracking
         <span class="label">Geschlecht</span>
         <div class="radio-wrap">
           <label class="radio-item" for="gender-1">
-            <input class="input" type="radio" name="gender" id="gender-1" value="male" checked>
+            <input class="input" type="radio" name="gender" id="gender-1" value="male">
             <span>Männlich</span>
           </label>
           <label class="radio-item" for="gender-2">
