--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -162,7 +162,7 @@ title: COVID-19 Tracking
           <span class="label"><%= t(:chronicCondition) %></span>
           <div class="radio-wrap">
             <label class="radio-item" for="chronicCondition-0">
-              <input class="input" type="radio" name="chronicCondition" id="chronicCondition-0" value="0">
+              <input class="input" type="radio" name="chronicConditionType" id="chronicCondition-0" value="0">
               <span><%= t(:noAnswer) %></span>
             </label>
             <label class="radio-item" for="chronicConditionType-1">
