Fixed data model

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -99,7 +99,7 @@ title: COVID-19 Tracking
               <span><%= t(:hospital) %></span>
             </label>
             <label class="radio-item" for="worksInHealth-2">
-              <input class="input" type="radio" name="worksInHealth" id="worksInHealth-2" value="privatepractice">
+              <input class="input" type="radio" name="worksInHealth" id="worksInHealth-2" value="private_practice">
               <span><%= t(:privatePractice) %></span>
             </label>
             <label class="radio-item" for="worksInHealth-3">
@@ -161,20 +161,20 @@ title: COVID-19 Tracking
         <div class="input-wrap input-wrap--radio">
           <span class="label"><%= t(:chronicCondition) %></span>
           <div class="radio-wrap">
-            <label class="radio-item" for="chronicCondition-0">
-              <input class="input" type="radio" name="chronicConditionType" id="chronicCondition-0" value="0">
+            <label class="radio-item" for="chronicConditionType-0">
+              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-0" value="no">
               <span><%= t(:noAnswer) %></span>
             </label>
             <label class="radio-item" for="chronicConditionType-1">
-              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-1" value="cardiac">
+              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-1" value="heart">
               <span><%= t(:heart) %></span>
             </label>
             <label class="radio-item" for="chronicConditionType-2">
-              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-2" value="pulmonary">
+              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-2" value="lung">
               <span><%= t(:lung) %></span>
             </label>
             <label class="radio-item" for="chronicConditionType-3">
-              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-3" value="dabetic">
+              <input class="input" type="radio" name="chronicConditionType" id="chronicConditionType-3" value="dabetes">
               <span><%= t(:diabetes) %></span>
             </label>
             <label class="radio-item" for="chronicConditionType-4">
