--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -116,13 +116,14 @@ p {
   padding: 2rem 0 6rem 0;
 }
 
-#form-expanded {
+/*#form-expanded {
   display: none;
 
   &.visible {
     display: block;
   }
 }
+*/
 
 .input-wrap {
   margin: 2.5rem 0;
